--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ PORT=5000
 JWT_SECRET="dladmakdmlazmldkajfaz"
 JWT_EXPIRE="30d"
 JWT_COOKIE_EXPIRE=30
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=42612c1af79deb
+SMTP_PASSWORD=e2cbe3783b864f
+FROM_EMAIL=marouene46@gmail.com
+FROM_NAME=CampiTN
