--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "leaflet": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^2.2.0",
-    "leaflet": "^1.4.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.4",
     "react-spring": "8.0.25",
     "web-vitals": "^1.0.1"
@@ -46,6 +46,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "proxy": "http://localhost:5000"
 }
