--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
+    "nodemailer": "^6.7.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
