--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "concurrently": "^6.3.0"
+    "concurrently": "^6.3.0",
+    "nodemon": "^2.0.15"
   }
 }
