--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -23,17 +24,17 @@
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^6.0.1",
     "express-validator": "^6.13.0",
+    "gridfs-stream": "^1.1.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
-    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.7.2",
-    "xss-clean": "^0.1.1",
     "redis": "^4.0.1",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
